# insula

./: .gitignore  CMakeLists.txt  application_title.cpp  application_title.hpp  arrow.cpp  arrow.hpp  arrow_parameters.hpp  arrow_parameters_fwd.hpp  create_path.cpp  create_path.hpp  create_variables_map.cpp  create_variables_map.hpp  display_2d_array.hpp  display_2d_grid.hpp  exception.cpp  exception.hpp  game_cli_options.cpp  game_cli_options.hpp  generate_height_texture.cpp  generate_nuggets.cpp  generate_nuggets.hpp  get_option.hpp  ghost_instance.cpp  ghost_instance.hpp  height_field_test  height_map.hpp  help_needed.cpp  help_needed.hpp  image_to_height_map.cpp  image_to_height_map.hpp  index.html  input_delegator.cpp  input_delegator.hpp  input_delegator_fwd.hpp  insula.cpp  json_test.cpp  load_image_to_array.cpp  machine.cpp  machine.hpp  machine_fwd.hpp  (+60 more)
CMakeModules/: FindFcppt.cmake  FindMizuiro.cmake  FindSGE.cmake
console/: object.cpp  object.hpp  object_fwd.hpp  redirect_mode.hpp  scoped_rdbuf.cpp  scoped_rdbuf.hpp  scoped_rdbuf_fwd.hpp  sink.cpp  sink.hpp  streambuf.cpp  streambuf.hpp
events/: key.cpp  key.hpp  key_repeat.cpp  key_repeat.hpp  mouse_axis.cpp  mouse_axis.hpp  mouse_button.cpp  mouse_button.hpp  nuggets_empty.hpp  render.cpp  render.hpp  render_fwd.hpp  tick.cpp  tick.hpp  tick_fwd.hpp  timer_expired.hpp  vehicle_nugget_collision.cpp  vehicle_nugget_collision.hpp
ghost/: blueprint.hpp  instance.cpp  instance.hpp  instance_fwd.hpp  manager.cpp  manager.hpp  manager_fwd.hpp  manager_parameters.hpp  manager_parameters_fwd.hpp  shared_instance_ptr.hpp
gizmo/: basic.hpp  from_mat3.hpp  lock_to.hpp  mirror_at_plane.hpp  mirror_point_at_plane.hpp  normalize.hpp  orthogonalize_keep_axis.hpp  orthogonalize_simple.hpp  rotation_to_mat4.hpp  size_type.hpp  structure_cast.hpp  to_mat4.hpp
graphics/: basic_gizmo.hpp  box.hpp  camera.cpp  camera.hpp  camera_fwd.hpp  cli_options.cpp  cli_options.hpp  dim2.hpp  dim3.hpp  frame_counter.cpp  frame_counter.hpp  frustum.hpp  gizmo.cpp  gizmo.hpp  gizmo_from_mat3.cpp  gizmo_from_mat3.hpp  gizmo_init.hpp  lock_camera_to.cpp  lock_camera_to.hpp  mat3.hpp  mat4.hpp  plane.hpp  rect.hpp  scalar.hpp  scoped_camera.cpp  scoped_camera.hpp  shader.cpp  shader.hpp  shader_fwd.hpp  shader_to_console.cpp  shader_to_console.hpp  shaders.cpp  shaders.hpp  stats.cpp  stats.hpp  vec2.hpp  vec3.hpp  vec4.hpp
grid/: gradient_simple.hpp
height_map/: array.hpp  array_to_image.cpp  array_to_image.hpp  average_convolute.cpp  average_convolute.hpp  calculate_index_cell.hpp  calculate_normal.cpp  calculate_normal.hpp  calculate_point.cpp  calculate_point.hpp  cli_factory.cpp  cli_factory.hpp  cli_options.cpp  cli_options.hpp  console_proxy.cpp  console_proxy.hpp  convolute.cpp  convolute.hpp  convolution_matrix.hpp  dim2.hpp  dim3.hpp  flatness_range.hpp  generate_gradient.cpp  generate_gradient.hpp  generate_gradient_simple.cpp  generate_gradient_simple.hpp  gray_store.hpp  gray_view.hpp  height_for_point.cpp  height_for_point.hpp  image_to_array.cpp  image_to_array.hpp  index_visitor.hpp  normalize_and_stretch.cpp  normalize_and_stretch.hpp  object.cpp  object.hpp  object_fwd.hpp  object_ptr.hpp  parameters.hpp  (+14 more)
json/: config_wrapper.cpp  config_wrapper.hpp  convert.hpp  find_member.hpp  member_has_type.hpp  merge_trees.cpp  merge_trees.hpp  parse_config.cpp  parse_config.hpp  parse_font.cpp  parse_font.hpp  parse_vector.hpp  process_option.cpp  process_option.hpp  string_to_value.cpp  string_to_value.hpp
math/: barycentric_coordinates.hpp  basic_frustum.hpp  box_radius.hpp  extract_frustum.hpp  matrix_row.hpp  sawtooth.hpp  sphere_point.hpp  uniform_scaling_matrix.hpp
media/: License.txt  config.json  config.po  debug_fragment.glsl  debug_vertex.glsl  fragment.glsl  height_map_fragment.glsl  height_map_shadow_fragment.glsl  height_map_shadow_vertex.glsl  height_map_vertex.glsl  model_fragment.glsl  model_shadow_fragment.glsl  model_shadow_vertex.glsl  model_vertex.glsl  physics_fragment.glsl  physics_vertex.glsl  point_fragment.glsl  point_sprite.json  point_vertex.glsl  quad_fragment.glsl  quad_vertex.glsl  shadow_alt_fragment.glsl  shadow_alt_vertex.glsl  shadow_fragment.glsl  shadow_vertex.glsl  skydome_fragment.glsl  skydome_vertex.glsl  vertex.glsl  view_model.json  water_fragment.glsl  water_vertex.glsl
model/: backend.cpp  backend.hpp  backend_fwd.hpp  create_shader.cpp  create_shader.hpp  create_shadow_shader.cpp  create_shadow_shader.hpp  instance.cpp  instance.hpp  object.cpp  object.hpp  object_fwd.hpp  object_ptr.hpp  scoped.cpp  scoped.hpp  shared_object_ptr.hpp
nugget/: empty_callback.hpp  instance.cpp  instance.hpp  instance_fwd.hpp  manager.cpp  manager.hpp  manager_fwd.hpp  parameters.hpp  parameters_fwd.hpp  shared_instance_ptr.hpp
overlay/: function_backend.cpp  function_backend.hpp  object.cpp  object.hpp  parameters.hpp  parameters_fwd.hpp
physics/: box.hpp  bullet_to_mat3.cpp  bullet_to_mat3.hpp  bullet_to_mat4.cpp  bullet_to_mat4.hpp  bullet_to_vec3.cpp  bullet_to_vec3.hpp  callback_fn.hpp  character_controller.cpp  character_controller.hpp  cli_options.cpp  cli_options.hpp  collision_callback.hpp  create_vehicle.hpp  culler.cpp  culler.hpp  debug_drawer.cpp  debug_drawer.hpp  dim3.hpp  dim3_to_bullet.cpp  dim3_to_bullet.hpp  filter_callback.cpp  filter_callback.hpp  ghost.cpp  ghost.hpp  ghost_parameters.hpp  ghost_parameters_fwd.hpp  gizmo.hpp  height_field.cpp  height_field.hpp  height_map.cpp  height_map.hpp  iteration.hpp  mat3.hpp  mat3_to_bullet.cpp  mat3_to_bullet.hpp  mat4.hpp  mat4_sequence.hpp  model_approximation.cpp  model_approximation.hpp  (+54 more)
player/: action.hpp  object.cpp  object.hpp  object_fwd.hpp  parameters.cpp  parameters.hpp  parameters_fwd.hpp
projectile/: manager.cpp  manager.hpp  manager_fwd.hpp  manager_parameters.hpp  manager_parameters_fwd.hpp
prop/: backend.hpp  blueprint.hpp  instance.cpp  instance.hpp  (+10 more)
test/: CMakeLists.txt  bernstein_polynomial.cpp  calculate_index.cpp  convolute.cpp  display_2d_array.cpp  display_2d_grid.cpp  frustum.cpp  gradient.cpp
(+339 files in other folders)
