FIND_PACKAGE(
	Boost 1.40.0 REQUIRED COMPONENTS
	unit_test_framework
)

MACRO(
	ADD_INSULA_TEST
	PATHNAME
)
	STRING(REGEX REPLACE "\\/" "_" TESTNAME ${PATHNAME})

	SET(INSULA_TEST_NAME insula${TESTNAME}test)

	ADD_EXECUTABLE (${INSULA_TEST_NAME} ${PATHNAME}.cpp)

	IF(MSVC)
		SET_PROPERTY(
			TARGET ${INSULA_TEST_NAME}
			PROPERTY COMPILE_FLAGS
			"-DBOOST_TEST_NO_LIB -DBOOST_TEST_MODULE=${TESTNAME}"
		)
	ELSE()
		SET_PROPERTY(
			TARGET ${INSULA_TEST_NAME}
			PROPERTY COMPILE_FLAGS
			"-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MODULE=${TESTNAME}"
		)
	ENDIF()

	TARGET_LINK_LIBRARIES (
		${INSULA_TEST_NAME}
		${INSULA_DEFAULT_LINK_TARGET}
		${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
	)

	ADD_TEST(
		NAME
		${INSULA_TEST_NAME}
		COMMAND
		${INSULA_TEST_NAME}
	)
ENDMACRO()

ADD_INSULA_TEST(display_2d_array)
ADD_INSULA_TEST(calculate_index)
